force-app/main/default/objects/Lead/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <label>City</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Tier-I</fullName>
            </value>
            <value>
                <fullName>Tier-II</fullName>
            </value>
            <value>
                <fullName>Tier-III</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>