force-app/main/default/objects/Lead/fields/Lead_Status__c.field-meta.xml
<CustomField>
    <fullName>Lead_Status__c</fullName>
    <label>Lead Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Submitted For Approval</fullName>
            </value>
            <value>
                <fullName>Not Submitted For Approval</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>