force-app/main/default/objects/Lead/fields/Referral_Person_Email__c.field-meta.xml
<CustomField>
    <fullName>Referral_Person_Email__c</fullName>
    <label>Referral Person Email</label>
    <type>Email</type>
</CustomField>