force-app/main/default/objects/Lead/fields/Referral_Type__c.field-meta.xml
<CustomField>
    <fullName>Referral_Type__c</fullName>
    <label>Referral Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Customer Referral – When an existing customer refers someone.</fullName>
            </value>
            <value>
                <fullName>Partner Referral – When a business partner (reseller, distributor, ISV, etc.) refers a lead.</fullName>
            </value>
            <value>
                <fullName>Employee Referral – When an internal employee refers a lead.</fullName>
            </value>
            <value>
                <fullName>Vendor Referral – When a supplier/vendor organization refers a lead.</fullName>
            </value>
            <value>
                <fullName>Affiliate Referral – When affiliates or referral program members refer a lead.</fullName>
            </value>
            <value>
                <fullName>Event Referral – When a referral comes through a hosted or sponsored event.</fullName>
            </value>
            <value>
                <fullName>Other – A catch-all for anything that doesn’t fit predefined categories.</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>