force-app/main/default/objects/Lead/fields/Special_Lead__c.field-meta.xml
<CustomField>
    <fullName>Special_Lead__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Special Lead</label>
    <type>Checkbox</type>
</CustomField>