force-app/main/default/objects/Lead/listViews/TodaysLeads.listView-meta.xml
<ListView>
    <fullName>TodaysLeads</fullName>
    <columns>FULL_NAME</columns>
    <columns>City__c</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>Company_Size__c</columns>
    <columns>Special_Lead__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LEAD.CREATED_DATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>Today&apos;s Leads</label>
</ListView>